--- a/app/src/main/res/drawable/menu_btn_colors.xml
+++ b/app/src/main/res/drawable/menu_btn_colors.xml
@@ -1,21 +1,20 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
     <!-- Focused and not pressed -->
-    <item android:state_focused="true"
+    <item
+        android:state_focused="true"
         android:state_pressed="false"
         android:color="@color/dark_grey"/>
-
     <!-- Focused and pressed -->
-    <item android:state_focused="true"
+    <item
+        android:state_focused="true"
         android:state_pressed="true"
         android:color="@color/red" />
-
     <!-- Unfocused and pressed -->
-    <item android:state_focused="false"
+    <item
+        android:state_focused="false"
         android:state_pressed="true"
         android:color="@color/red" />
-
     <!-- Default color -->
-    <item android:color="@color/dark_grey" />
-
+    <item
+        android:color="@color/white" />
 </selector>
