--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -33,7 +33,7 @@
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:textSize="19sp"
-        android:textColor="@color/white"
+        android:textColor="@drawable/menu_btn_colors"
         android:textAllCaps="false"
         android:fontFamily="@font/baufra_demibold"
         android:background="@drawable/custom_button_login"
@@ -47,7 +47,7 @@
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:textSize="19sp"
-        android:textColor="@color/white"
+        android:textColor="@drawable/menu_btn_colors"
         android:textAllCaps="false"
         android:fontFamily="@font/baufra_demibold"
         android:background="@drawable/custom_button_login"
@@ -61,7 +61,7 @@
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:textSize="19sp"
-        android:textColor="@color/white"
+        android:textColor="@drawable/menu_btn_colors"
         android:textAllCaps="false"
         android:fontFamily="@font/baufra_demibold"
         android:background="@drawable/custom_button_login"
