--- a/app/src/main/res/layout/activity_records.xml
+++ b/app/src/main/res/layout/activity_records.xml
@@ -17,10 +17,10 @@
         android:layout_marginTop="@dimen/spacing_small_8"/>
 
     <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/btn_back"
+        android:id="@+id/btn_close"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_close_black_35dp"
+        android:src="@drawable/close_btn_states"
         android:background="@android:color/transparent"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="@dimen/spacing_small_8"
