--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -6,13 +6,13 @@
 
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/btn_exit"
-        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/close_btn_states"
+        android:visibility="gone"
         android:background="@android:color/transparent"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="@dimen/spacing_normal_16"
+        android:layout_marginTop="@dimen/spacing_small_8"
         android:padding="@dimen/spacing_normal_16"/>
 
     <TextView
