--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -33,7 +33,6 @@
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/et_login"
         android:hint="@string/enter_nickname"
-        android:padding="@dimen/spacing_small_8"
         style="@style/baufra21_ed.white"
         android:layout_centerInParent="true"
         android:gravity="center"
@@ -43,6 +42,8 @@
         android:layout_above="@id/container_of_btn"
         android:layout_marginBottom="@dimen/spacing_small_8"
         android:backgroundTint="@color/black_for_ed"
+        android:padding="@dimen/spacing_small_8"
+        android:singleLine="true"
         android:layout_marginTop="@dimen/spacing_normal_16"/>
 
     <RelativeLayout
