--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -33,6 +33,8 @@
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/et_login"
         android:hint="@string/enter_nickname"
+        android:maxLength="14"
+        android:digits="@string/digits"
         style="@style/baufra21_ed.white"
         android:layout_centerInParent="true"
         android:gravity="center"
