--- a/app/src/main/res/layout/fragment_two.xml
+++ b/app/src/main/res/layout/fragment_two.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/white">
 
     <RelativeLayout
         android:layout_weight="0.1"
@@ -30,6 +31,16 @@
             android:src="@drawable/close_btn_states"
             android:visibility="gone"
             android:layout_alignParentEnd="true"/>
+
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/btn_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:padding="@dimen/spacing_normal_16"
+            android:src="@drawable/back_btn_states"
+            android:visibility="gone"
+            android:layout_alignParentStart="true"/>
 
     </RelativeLayout>
 
