--- a/app/src/main/res/layout/fragment_records.xml
+++ b/app/src/main/res/layout/fragment_records.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.records.RecordsActivity"
+    tools:context=".ui.records.RecordsFragment"
     android:background="@android:color/transparent">
 
     <TextView
